--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,5 @@
 name: proportal_app
-description: "A new Flutter project."
-
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
+description: "自分専用の日記作成アプリです"
 
 version: 1.0.0+1
 
@@ -26,6 +24,8 @@ dependencies:
   cloud_firestore:
 
   firebase_remote_config: 
+
+  web:  
 
 
   cupertino_icons: ^1.0.8
